--- a/scss/_ability.scss
+++ b/scss/_ability.scss
@@ -10,6 +10,10 @@ $borderR-img: 5px;
     width: 100vw;
     height: 50vh;
     background-color: #DDDBF1;
+    background-image: url(/img/ability-top-back.png);
+    background-size: 105%;
+    background-position: top;
+    background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -95,11 +99,29 @@ $borderR-img: 5px;
             height: 100%;
             background-color: $color-EG;
             border-radius: $borderR-img;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
 
             h2 {
                 font-family: $font-Tks;
                 color: $color-B;
                 font-size: 3rem;
+            }
+
+            .ab-btn1-img {
+                width: 100%;
+                height: 50%;
+
+                img {
+                    width: 50%;
+                    height: auto;
+                    position: absolute;
+                    top: -10%;
+                    left: 25%;
+                }
             }
         }
 
@@ -358,6 +380,9 @@ $borderR-img: 5px;
             height: 90%;
             padding: 5% 0;
             justify-content: space-between;
+            background-image: url(/img/footer-back-s.png);
+            background-repeat: no-repeat;
+            background-size: 100%;
 
             img {
                 width: 30%;
@@ -370,7 +395,6 @@ $borderR-img: 5px;
                 display: flex;
                 align-items: center;
                 flex-direction: column;
-                ;
                 justify-content: space-around;
 
                 .footer-btn-ability {
