--- a/scss/_goods.scss
+++ b/scss/_goods.scss
@@ -13,6 +13,10 @@ html {
     width: 100vw;
     height: 50vh;
     background-color: #F6F5AE;
+    background-image: url(/img/ability-top-back.png);
+    background-size: 105%;
+    background-position: top;
+    background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -395,6 +399,9 @@ html {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            background-image: url(/img/goods-back-s.png);
+            background-repeat: no-repeat;
+            background-size: 100%;
 
             .item-flex {
                 margin: $margin-center;
@@ -439,6 +446,9 @@ html {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            background-image: url(/img/goods-back-s.png);
+            background-repeat: no-repeat;
+            background-size: 100%;
 
             .item-flex {
                 margin: $margin-center;
@@ -483,6 +493,9 @@ html {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            background-image: url(/img/goods-back-s.png);
+            background-repeat: no-repeat;
+            background-size: 100%;
 
             .item-flex {
                 margin: $margin-center;
@@ -527,6 +540,9 @@ html {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            background-image: url(/img/goods-back-s.png);
+            background-repeat: no-repeat;
+            background-size: 100%;
 
             .item-flex {
                 margin: $margin-center;
@@ -569,6 +585,9 @@ html {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            background-image: url(/img/goods-back-s.png);
+            background-repeat: no-repeat;
+            background-size: 100%;
 
             .item-flex {
                 margin: $margin-center;
@@ -628,8 +647,8 @@ html {
         justify-content: space-between;
         opacity: 0;
         visibility: hidden;
-    
-    
+
+
         h3 {
             font-family: $font-Tks;
             font-size: 2.3rem;
@@ -637,12 +656,12 @@ html {
             margin: 5% 0 2% 0;
             color: $color-B;
             line-height: 120%;
-    
+
             span {
                 font-size: 1.5rem;
             }
         }
-    
+
         .goods-info-main {
             width: 90%;
             height: 90%;
@@ -652,12 +671,12 @@ html {
             align-items: center;
             flex-direction: column;
             justify-content: space-between;
-    
+
             img {
                 width: 90%;
                 height: auto;
             }
-    
+
             p {
                 font-family: $font-Tks;
                 text-align: center;
@@ -666,18 +685,18 @@ html {
                 color: $color-B;
                 font-weight: bold;
             }
-    
+
             .product {
                 width: 90%;
                 height: 25%;
                 background-color: $color-W;
                 display: flex;
                 justify-content: center;
-    
+
                 .product-left {
                     width: 55%;
                     height: 100%;
-    
+
                     h4 {
                         font-family: $font-Tks;
                         color: $color-W;
@@ -685,12 +704,12 @@ html {
                         color: $color-B;
                         line-height: 120%;
                         margin: 10% 0 8% 0;
-    
+
                         span {
                             font-size: 0.1rem;
                         }
                     }
-    
+
                     p {
                         font-family: $font-Tks;
                         color: $color-W;
@@ -701,7 +720,7 @@ html {
                         line-height: 250%;
                     }
                 }
-    
+
                 .product-right {
                     width: 30%;
                     height: 100%;
@@ -709,13 +728,13 @@ html {
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-    
+
                     img {
                         width: 100%;
                         height: auto;
                         margin-bottom: 10%;
                     }
-    
+
                     .product-right-btn {
                         width: 100%;
                         height: 15%;
@@ -724,7 +743,7 @@ html {
                         align-items: center;
                         justify-content: center;
                         border-radius: 10px;
-    
+
                         a {
                             text-decoration: none;
                             font-family: $font-Tks;
