--- a/scss/_ability.scss
+++ b/scss/_ability.scss
@@ -271,6 +271,22 @@ $borderR-img: 5px;
     }
 }
 
+// #parent-menu {
+
+//     li:nth-child(1) {
+//         a {
+//             color: $color-W;
+//         }
+//     }
+
+//     li:nth-child(2) {
+//         a {
+//             color: #F7A514;
+//         }
+//     }
+
+// }
+
 .active {
     opacity: 1;
     visibility: visible;
