--- a/scss/_parent.scss
+++ b/scss/_parent.scss
@@ -732,7 +732,7 @@ body {
             }
         }
 
-        li:nth-child(1):hover {
+        li:nth-child(1) {
             a {
                 color: #F7A514;
             }
